--- a/style.css
+++ b/style.css
@@ -50,9 +50,14 @@ h1 {
     background-color: black;
     color: #5C5E63;
 
+    font-size: 0.8rem;
+    font-weight: bold;
+
     min-width: 290px;
 
     padding-top: 100px;
+
+    margin-left: 15px;
 }
 
 .icon-column {
@@ -64,7 +69,6 @@ height: 100px;
 
 list-style-type: none;
 
-margin-left: 15px;
 }
 
 .gap {
@@ -99,14 +103,45 @@ padding-bottom: 10px;
 
 .add-icon {
     font-size: 3.5rem;
+    color: #909090;
 
-    border-radius: none;
+    padding-bottom: 8px;
+
+    position: relative;
+}
+
+.crea {
+font-size: 1.1rem;
+color: #5C5E63;
+
+position: absolute;
+top: 32.5%;
+left: 22.5%;
 }
 
 .playlist {
-    font-size: 2rem;
+    font-size: 1rem;
+
+    text-transform: uppercase;
+
+    color: white;
+
+    padding-bottom: 8px;
 }
 
+.nome {
+    font-size: 1rem;
+    
+    list-style-type: none;
+    
+margin-bottom: 20px;
+}
+
+.panel-bottom {
+    border: 1px red solid;
+
+    margin-top: 480px;
+}
 
 
 /* END OF LEFT PANEL */
@@ -116,8 +151,11 @@ padding-bottom: 10px;
 
 h2 {
     margin: 15px;
+    padding-bottom: 15px;
 
     font-size: 2rem;
+
+    
 }
 
 h3 {
@@ -126,6 +164,8 @@ h3 {
     font-size: 0.8rem;
 
     margin-left: 15px;
+    padding-bottom: 30px;
+
 }
 .menu-list {
 color: #5C5E63;
